<?xml version="1.0"?>
<package format="3">
  <name>robot_gazebo</name>
  <version>0.2.0</version>
  <description>
    robot_gazebo package
  </description>
  <maintainer email="fanziqi614@gmail.com">FanZiqi</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes"/> -->
  </export>
</package>
