<?xml version="1.0"?>
<package format="2">
  <name>teleop_twist_keyboard</name>
  <version>2.3.2</version>
  <description>
    A robot-agnostic teleoperation node to convert keyboard commands to Twist
    messages.
  </description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD License 2.0</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author email="namniart@gmail.com">Austin Hendrix</author>
  <author>Graylin Trevor Jay</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
